[package]
name = "mutflex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["futures"]
nightly = []

[dependencies]
cfg-if = "1"
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"